# TransReID

./: pyproject.toml
