[project]
name = "TransReID"
version = "0.1.0"
description = ""
authors = [
    {name = "yanzeradev",email = "yankarlos.solraknay@hotmail.com"}
]
readme = "README.md"

requires-python = ">=3.10,<=3.13"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
