[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sense-transreid"
version = "0.1.0"
description = "projeto transreid customizado"
requires-python = ">=3.10,<=3.13"

# Esta seção diz ao setuptools para procurar pacotes na raiz do projeto
[tool.setuptools.packages.find]
where = ["."]
